--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "description": "a documentation viewer for node",
   "version": "0.0.0",
+  "preferGlobal": true,
   "dependencies": {
     "flatiron": "0.1.x",
     "colors": "0.6.x",
