--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "preferGlobal": true,
   "dependencies": {
     "flatiron": "0.1.x",
+    "underscore": "1.3.x",
     "colors": "0.6.x",
     "wordwrap": "0.0.x",
     "underscore.string": "2.2.x",
