--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "flatiron": "0.1.x",
     "underscore": "1.3.x",
+    "async": "0.1.x",
     "colors": "0.6.x",
     "wordwrap": "0.0.x",
     "underscore.string": "2.2.x",
