--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "description": "a documentation viewer for node",
   "version": "0.0.0",
   "preferGlobal": true,
+  "homepage": "https://github.com/russfrank/nd",
   "dependencies": {
     "flatiron": "0.1.x",
     "underscore": "1.3.x",
