--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "colors": "0.6.x",
     "wordwrap": "0.0.x",
     "underscore.string": "2.2.x",
-    "npm": "1.1.x",
+    "npm": "*",
     "request": "2.9.x",
     "moar": "0.0.x"
   },
