--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "description": "a documentation viewer for node",
   "version": "1.1.1",
   "preferGlobal": true,
-  "homepage": "https://github.com/russfrank/nd",
+
+  "homepage":            "https://github.com/rf/nd",
+  "bugs":       { "url": "https://github.com/rf/nd/issues" },
+  "repository": { "url": "https://github.com/rf/nd.git", "type": "git" },
+
   "dependencies": {
     "flatiron": "0.1.x",
     "underscore": "1.3.x",
