--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "nd",
+  "author": "Russ Frank <me@russfrank.us>",
+
   "description": "a documentation viewer for node",
   "version": "1.1.1",
   "preferGlobal": true,
@@ -27,7 +30,5 @@
   },
   "bin": {
     "nd": "./bin/nd"
-  },
-  "name": "nd",
-  "author": "Russ Frank <me@russfrank.us"
+  }
 }
