--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "nd",
   "author": "Russ Frank <me@russfrank.us>",
-
   "description": "a documentation viewer for node",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "preferGlobal": true,
-
-  "homepage":            "https://github.com/rf/nd",
-  "bugs":       { "url": "https://github.com/rf/nd/issues" },
-  "repository": { "url": "https://github.com/rf/nd.git", "type": "git" },
-
+  "homepage": "https://github.com/rf/nd",
+  "bugs": {
+    "url": "https://github.com/rf/nd/issues"
+  },
+  "repository": {
+    "url": "https://github.com/rf/nd.git",
+    "type": "git"
+  },
   "dependencies": {
     "flatiron": "0.1.x",
     "underscore": "1.3.x",
